# todo-python-ai

./: .env  .env.example  Makefile  pyproject.toml
alembic/: env.py
alembic/versions/: f3ff52b265fc_create_column_phone_table_user.py
app/: main.py
app/api/: todo.py  user.py
app/core/: secutiry.py
app/db/: session.py
app/models/: todos.py  user.py
